Added some CSS and some other files

--- a/flights/templates/flight.html
+++ b/flights/templates/flight.html
@@ -1,29 +1,29 @@
 {% extends "layout.html" %} {% block body %}
-<h1>Flight {{ flight.id }}</h1>
-<ul>
-  <li>Origin: {{ flight.origin }}</li>
-  <li>Destination: {{ flight.destination }}</li>
-  <li>Duration: {{ flight.duration }} minutes</li>
+<h1 class="m-2">Flight {{ flight.id }}</h1>
+<ul class="m-2 list-group">
+  <li class="list-group-item">Origin: {{ flight.origin }}</li>
+  <li class="list-group-item">Destination: {{ flight.destination }}</li>
+  <li class="list-group-item">Duration: {{ flight.duration }} minutes</li>
 </ul>
 
-<h2>Passengers:</h2>
-<ul>
+<h2 class="m-2">Passengers:</h2>
+<ul class="m-2 mb-5 list-group-numbered">
   {% for passenger in passengers %}
-  <li>{{ passenger }}</li>
+  <li class="list-group-item">{{ passenger }}</li>
   {% empty %}
-  <li>No Passengers.</li>
+  <li class="list-group-item">No Passengers.</li>
   {% endfor %}
 </ul>
 
-<form action="{% url 'book' flight.id %}" method="post">
+<form class="m-2" action="{% url 'book' flight.id %}" method="post">
   {% csrf_token %}
-  <select name="passenger" id="">
+  <select class="form-select" name="passenger" id="">
     {% for passenger in non_passengers %}
     <option value="{{ passenger.id }}">{{ passenger }}</option>
     {% endfor %}
   </select>
-  <input type="submit" />
+  <input class="mt-2 btn btn-primary" type="submit" />
 </form>
 
-<a href="{% url 'index' %}">All Flights</a>
+<a class="m-2" href="{% url 'index' %}">All Flights</a>
 {% endblock %}
