--- a/flights/templates/index.html
+++ b/flights/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <h1>Flights:</h1>
-    <ul>
+    <h1 class="m-2">Flights:</h1>
+    <ul class="m-2 list-group">
         {% for flight in flights %}
-        <li><a href="{% url 'flight' flight.id %}">Flight {{ flight.id }}</a>: {{ flight.origin }} to {{ flight.destination }}</li>
+        <li class="list-group-item">
+            <button class="btn btn-info"><a class="text-decoration-none" href="{% url 'flight' flight.id %}">Flight {{ flight.id }}</a></button> {{ flight.origin }} to {{ flight.destination }}
+        </li>
         {% endfor %}
     </ul>
 {% endblock %}
